# rag-repository-explorer

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.indexer  Dockerfile.migrations  LICENSE  README.md  docker-compose.yaml  pyproject.toml  sources.json
docker/: Dockerfile.embedding
docker/ollama/: init-model.sh
migrations/: env.py
migrations/versions/: 9071d5418979_create_chunks_table.py
services/api/: llm.py  main.py  routes.py
services/embedding/: main.py  schemas.py
services/indexer/: chunker.py  embeddings.py  loader.py  main.py  models.py
shared/: config.py  embeddings.py
shared/db/: connection.py  models.py
