[project]
name = "rag-repository-explorer"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "asyncpg>=0.31.0",
    "greenlet>=3.5.3",
    "pgvector>=0.5.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
api = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "pydantic-ai>=2.11.0",
]

indexer = []

migrations = [
    "alembic>=1.18.5",
]

embedding = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "sentence-transformers>=5.6.0",
]

dev = [
    "ruff>=0.15.21",
]
